# envoy-web

./: .gitignore  AUTH_SPEC.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  flake.nix  hacs.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml  validate-hacs.yml  validate-hassfest.yml
config/: configuration.yaml
custom_components/envoy_web/: __init__.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  data.py  manifest.json  number.py  select.py  sensor.py  services.yaml  strings.json
custom_components/envoy_web/translations/: en.json
scripts/: .env.dist  develop  envoy_cli.py  release  release.sh  setup  test
tests/: README.md  __init__.py  conftest.py  test_browser_headers.py  test_config_flow.py  test_coordinator.py  test_entities.py  test_init.py
