[project]
name = "envoy-web"
version = "0.1.0"
description = "Home Assistant custom component for Enphase Enlighten battery profile control"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Craig Citro" }]
license = { text = "MIT" }
keywords = ["home-assistant", "enphase", "envoy", "enlighten", "hacs"]

[project.urls]
Homepage = "https://github.com/ccitro/envoy-web"
Repository = "https://github.com/ccitro/envoy-web"
Issues = "https://github.com/ccitro/envoy-web/issues"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
